{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 58,
  "lineage": "d2da2d61-5408-c268-0468-81bf44fb9676",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017441585221:vpc/vpc-d2b964af",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c0aa04af",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-af3c42d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-d2b964af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-060b5378",
            "owner_id": "017441585221",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d-20201205104244774900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d",
            "target_id": "i-0cb1e4fa85624697e"
          },
          "dependencies": [
            "aws_instance.instance1",
            "aws_lb_target_group.front_end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d-20201205104244834700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d",
            "target_id": "i-070a9a22d7728f350"
          },
          "dependencies": [
            "aws_instance.instance2",
            "aws_lb_target_group.front_end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017441585221:subnet/subnet-58b0e115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-58b0e115",
            "map_public_ip_on_launch": true,
            "owner_id": "017441585221",
            "tags": {
              "Name": "Default subnet for us-east-2a"
            },
            "vpc_id": "vpc-d2b964af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017441585221:subnet/subnet-5b50d204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-5b50d204",
            "map_public_ip_on_launch": true,
            "owner_id": "017441585221",
            "tags": {
              "Name": "Default subnet for us-east-2a"
            },
            "vpc_id": "vpc-d2b964af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0870650fde0fef2d4",
            "arn": "arn:aws:ec2:us-east-1:017441585221:instance/i-0cb1e4fa85624697e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb1e4fa85624697e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a43db7c3a229d19",
            "private_dns": "ip-172-31-69-222.ec2.internal",
            "private_ip": "172.31.69.222",
            "public_dns": "ec2-3-237-1-58.compute-1.amazonaws.com",
            "public_ip": "3.237.1.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-047e11ef5253517a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aebbc0a0",
            "tags": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-8d24cbb9"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0870650fde0fef2d4",
            "arn": "arn:aws:ec2:us-east-1:017441585221:instance/i-070a9a22d7728f350",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070a9a22d7728f350",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01795543106369def",
            "private_dns": "ip-172-31-70-123.ec2.internal",
            "private_ip": "172.31.70.123",
            "public_dns": "ec2-3-236-46-182.compute-1.amazonaws.com",
            "public_ip": "3.236.46.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-093b0feaf83615588",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aebbc0a0",
            "tags": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-8d24cbb9"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:loadbalancer/app/test-lb-tf/78b5cc6146a479c2",
            "arn_suffix": "app/test-lb-tf/78b5cc6146a479c2",
            "dns_name": "test-lb-tf-1460253391.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:017441585221:loadbalancer/app/test-lb-tf/78b5cc6146a479c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0fccfc63f3863a0a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-58b0e115"
              },
              {
                "subnet_id": "subnet-5b50d204"
              }
            ],
            "subnets": [
              "subnet-58b0e115",
              "subnet-5b50d204"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-d2b964af",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_security_group.ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:listener/app/test-lb-tf/78b5cc6146a479c2/b376b04b34485536",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:017441585221:listener/app/test-lb-tf/78b5cc6146a479c2/b376b04b34485536",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:loadbalancer/app/test-lb-tf/78b5cc6146a479c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.front_end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d",
            "arn_suffix": "targetgroup/frontend-target-group/ba90c8bf64cc513d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:017441585221:targetgroup/frontend-target-group/ba90c8bf64cc513d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "frontend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-d2b964af"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017441585221:security-group/sg-0880334bf912e9f5f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0880334bf912e9f5f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fccfc63f3863a0a3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "017441585221",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2b964af"
          },
          "dependencies": [
            "aws_security_group.ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017441585221:security-group/sg-0fccfc63f3863a0a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fccfc63f3863a0a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "017441585221",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2b964af"
          }
        }
      ]
    }
  ]
}